added new lasso model, with tracking, and model has been saved

--- a/model_tracking/Model_Tracking_ML_Flow.ipynb
+++ b/model_tracking/Model_Tracking_ML_Flow.ipynb
@@ -930,7 +930,10 @@
    "id": "bc29d29b-7a79-4118-9078-4187caf32c01",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('../models/lin_lasso_reg.bin', 'wb') as f_out:\n",
+    "    pickle.dump((dv, lr), f_out)"
+   ]
   }
  ],
  "metadata": {
