added new optimized model parameters

--- a/model_tracking/Model_Tracking_ML_Flow.ipynb
+++ b/model_tracking/Model_Tracking_ML_Flow.ipynb
@@ -5466,7 +5466,17 @@
    "id": "9f2f6a85-4a9f-4b3c-b0f6-f8779216ddb8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "params = {\n",
+    "'learning_rate': 0.05059823075449685,\n",
+    "'max_depth': 4,\n",
+    "'min_child_weight':5.008520794187583,\n",
+    "'objective':'reg:linear',\n",
+    "'reg_alpha':0.07415085063191965,\n",
+    "'reg_lambda':0.11333795232359768,\n",
+    "'seed':42\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
@@ -5474,7 +5484,15 @@
    "id": "fe59db98-ca56-466b-b034-b0e423cbe343",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "booster = xgb.train(\n",
+    "        params=params,\n",
+    "        dtrain=train,\n",
+    "        num_boost_round=200,\n",
+    "        evals=[(valid, \"validation\")],\n",
+    "        early_stopping_rounds=50\n",
+    "        )"
+   ]
   }
  ],
  "metadata": {
