added code to make predictions using xgbooster

--- a/model_tracking/Model_Tracking_ML_Flow.ipynb
+++ b/model_tracking/Model_Tracking_ML_Flow.ipynb
@@ -6582,22 +6582,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "4d669cb5-c6a8-407f-a6b8-f872c582f421",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/ml_ops_env/lib/python3.11/site-packages/xgboost/core.py:160: UserWarning: [14:03:40] WARNING: /var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b6b50u1t0e/croot/xgboost-split_1713972723244/work/cpp_src/src/objective/regression_obj.cu:209: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "logged_model = 'runs:/7bfa58a5f28045459f5f2d9f1ac3d1e5/model'\n",
     "\n",
     "# Load model as a PyFuncModel.\n",
-    "loaded_model = mlflow.pyfunc.load_model(logged_model)\n"
+    "loaded_model = mlflow.pyfunc.load_model(logged_model)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f848fa99-dd42-49d2-bc5a-d968322daae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mlflow.pyfunc.loaded_model:\n",
+       "  artifact_path: model\n",
+       "  flavor: mlflow.xgboost\n",
+       "  run_id: 7bfa58a5f28045459f5f2d9f1ac3d1e5"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7b8079f1-f56e-4782-8e0c-0f8c09e632f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/ml_ops_env/lib/python3.11/site-packages/xgboost/core.py:160: UserWarning: [14:05:48] WARNING: /var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b6b50u1t0e/croot/xgboost-split_1713972723244/work/cpp_src/src/objective/regression_obj.cu:209: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgboost_model = mlflow.xgboost.load_model(logged_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f9e1eb8e-8fc3-4a15-8dba-2634c86395cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xgboost.core.Booster at 0x15c2d1090>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgboost_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b3d82436-e39a-4479-9224-5e7c23355275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = xgboost_model.predict(valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6fa58257-0510-4a3e-a26f-be23a1c02800",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11445.923, 10363.26 ,  8623.1  ,  4712.278,  8197.278, 11185.833,\n",
+       "       10363.26 ,  6098.158,  4712.278, 11185.833], dtype=float32)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred[:10]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f848fa99-dd42-49d2-bc5a-d968322daae6",
+   "id": "0633c846-27be-4fcd-a37e-1a60b1bed0de",
    "metadata": {},
    "outputs": [],
    "source": []
